uptime-kuma/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: uptime-kuma
  name: uptime-kuma
  namespace: monitoring
spec:
  selector:
    app.kubernetes.io/name: uptime-kuma
  ports:
  - name: uptime-kuma
    port: 3001
    targetPort: 3001
  type: ClusterIP
